# ndkModule

./: .gitignore  build.gradle  local.properties
src/main/: AndroidManifest.xml
src/main/cpp/: CMakeLists.txt  ndkModule.cpp
src/main/java/com/example/ndkModule/: NativeLib.java
